--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
   },
+  "homepage": "https://sorasorata.github.io/myapp/",
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
