--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
   },
-  "homepage": "https://sorasorata.github.io/myapp/",
+  "homepage": "https://sorasorata.github.io/my-app/",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "yarn run build",
